--- a/src/abita/theme/static/css/main.css
+++ b/src/abita/theme/static/css/main.css
@@ -20,3 +20,15 @@
 #portal-footer li {
     display: list-item;
 }
+
+@media screen and (max-width: 600px) {
+    #visual-portal-wrapper {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    #visual-portal-wrapper {
+        width: 300px;
+    }
+}
