--- a/src/abita/theme/static/css/extra.css
+++ b/src/abita/theme/static/css/extra.css
@@ -1,5 +1,3 @@
-#contact {
-    border: 1px solid #205C90;
-    border-radius: 10px 10px 10px 10px;
-    padding: 0 5em 0.7em;
+#about h1 {
+    display: none;
 }
