--- a/src/abita/theme/browser/static/css/main.css
+++ b/src/abita/theme/browser/static/css/main.css
@@ -15,6 +15,9 @@ h1, h2, h3, h4, h5, h6 {
     border-bottom: 0.2em solid #003366;
     border-left: 0.4em solid #006c00;
 }
+#category a.link-category:hover {
+    color: white !important;
+}
 /* Footer */
 #portal-footer{
     padding: 0.5em 1em;
